--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,6 @@ a {
 .cdk-global-scrollblock {
     position: static !important;
     overflow-y: hidden !important;
-    margin-left: calc(100vw - 100%);
 }
 
 .container {
